<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.edu.utng.colvera.unidad1.DataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_your_name"
        android:textSize="@dimen/number_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/number_size"
        android:id="@+id/edt_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_age"
        android:textSize="@dimen/number_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/number_size"
        android:inputType="number"
        android:id="@+id/edt_age" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_phone"
        android:textSize="@dimen/number_size"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/number_size"
        android:inputType="phone"
        android:id="@+id/edt_phone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btn_submit"
        android:textSize="@dimen/number_size"
        android:layout_marginLeft="150px"
        android:layout_marginRight="150px"
        android:onClick="nextActivity4" />


</LinearLayout>